--- a/Index/Index.html
+++ b/Index/Index.html
@@ -400,9 +400,14 @@
         }
 
         const predefinedResponses = {
-            "Hii": "Hii!...How can I help you?",
+                       "Hii": "Hii!...How can I help you?",
+            "hii": "Hii!...How can I help you?",
+            "Hi": "Hii!...How can I help you?",
+            "hi": "Hii!...How can I help you?",
+            "hello": "Hello! How can I assist you today?",
             "Hello": "Hello! How can I assist you today?",
-    "What can I do from the dashboard?": "The dashboard gives you an overview of key metrics like total vendors and receivables. It’s the first screen you see after login.",
+    
+            "What can I do from the dashboard?": "The dashboard gives you an overview of key metrics like total vendors and receivables. It’s the first screen you see after login.",
     "How do I create a new load?": "Click on 'Create Load' from the side menu to enter load details and initiate a new shipment.",
     "What is a Route Card?": "The Route Card helps you manage and track planned transportation routes for your loads.",
     "How can I add stock to inventory?": "Use the 'Load IN' section to add incoming stock into your inventory system.",
@@ -450,8 +455,37 @@
   "how can i return a load?": "Use the 'Return' tab to select and process the load return entry.",
 
   "Can I generate reports by vendor?": "Yes, go to 'Reports', apply vendor filters, and generate the report.",
-  "can I generate reports by vendor?": "Yes, go to 'Reports', apply vendor filters, and generate the report."
+  "can I generate reports by vendor?": "Yes, go to 'Reports', apply vendor filters, and generate the report.",
+  
+  "How do I update transporter details?": "Go to 'Masters' > 'Transporters' to update transporter names, contact info, and vehicle types.",
+  "how do i update transporter details?": "Go to 'Masters' > 'Transporters' to update transporter names, contact info, and vehicle types.",
 
+  "How can I check pending loads?": "You can find pending loads in the 'Load List' section with status filters.",
+  "how can i check pending loads?": "You can find pending loads in the 'Load List' section with status filters.",
+
+  "Can I duplicate a previous load?": "Yes, you can use the 'Duplicate' option on any previous load to copy its details and create a new one.",
+  "can i duplicate a previous load?": "Yes, you can use the 'Duplicate' option on any previous load to copy its details and create a new one.",
+
+  "How do I reset my password?": "Click on your profile icon, go to settings, and select 'Change Password'.",
+  "how do i reset my password?": "Click on your profile icon, go to settings, and select 'Change Password'.",
+
+  "Can I track dispatch delivery status?": "Yes, you can track dispatch delivery status using the 'Dispatch' tracking tab or report.",
+  "can i track dispatch delivery status?": "Yes, you can track dispatch delivery status using the 'Dispatch' tracking tab or report.",
+
+  "What does the dashboard summary show?": "It displays total vendors, receivables, loads, dispatches, and current stock at a glance.",
+  "what does the dashboard summary show?": "It displays total vendors, receivables, loads, dispatches, and current stock at a glance.",
+
+  "Can I upload bulk data?": "Yes, bulk data uploads are available under 'Masters' for vendors, products, and transporters using CSV files.",
+  "can i upload bulk data?": "Yes, bulk data uploads are available under 'Masters' for vendors, products, and transporters using CSV files.",
+
+  "How do I deactivate a vendor or product?": "Navigate to the 'Masters' section, select the item, and toggle the active/inactive status.",
+  "how do i deactivate a vendor or product?": "Navigate to the 'Masters' section, select the item, and toggle the active/inactive status.",
+
+  "Can I schedule future dispatches?": "Yes, you can pre-schedule dispatches with expected dates and assign transporters in advance.",
+  "can i schedule future dispatches?": "Yes, you can pre-schedule dispatches with expected dates and assign transporters in advance.",
+
+  "Is there a notification system?": "Yes, the system sends alerts for key events like load creation, dispatch, return, and overdue payments.",
+  "is there a notification system?": "Yes, the system sends alerts for key events like load creation, dispatch, return, and overdue payments."
 
 };
 
